Thu Mar 30 12:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration.cpp:
        * ace/Shared_Memory_MM.cpp:
        * ace/ARGV.cpp:
          Fixed value might be unitialized warnings

Thu Mar 30 11:27:00 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Define variable ACE_CC_PREPROCESSOR to be 'cc' if the SunCC version
          is 5.4. This fixes bug #2478.

          See also: Thu Mar 30 11:26:45 UTC 2006  Simon McQueen  <sm@prismtech.com>
          in TAO/ChangeLog.

Thu Mar 30 11:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added BiDirectional_DelayedUpcall

Thu Mar 30 11:04:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Run BiDirectional_NestedUpcall also on VxWorks

Thu Mar 30 00:46:52 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/compiler.m4:

          Change the default of --enable-symbol-visibility option from yes
          to no.

Wed Mar 29 22:33:36 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Changed to #include <sys/types.h> in the <sys/sysctl.h>
          feature test, avoiding the autoconf "present but cannot
          be compiled" warning.

Wed Mar 29 19:26:37 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.cpp:
          Do not try to control DTR under LynxOS. It sets serial port
          to non-functional state.

Wed Mar 29 14:14:06 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ACE-INSTALL.html:
        * m4/ace.m4:

          Changed --with-gperf to --enable-gperf to be consistant with the
          intent of --with-* / --enable-* flags.  Thanks to Vincent Joseph
          <deskamess at yahoo dot com> for running into this.

Wed Mar 29 13:25:12 UTC 2006  Don Sharp     <Donald.Sharp@prismtech.com>

        * ace/Log_Msg.cpp: