@@ -161,7 +161,7 @@ run_test (void)
 
   // Let's test the iterator while we are at it.
   {
-    HASH_STRING_ENTRY *entry;
+    HASH_STRING_ENTRY *entry = 0;
     size_t i = 0;
 
     for (HASH_STRING_ITER hash_iter (hash);
@@ -179,7 +179,7 @@ run_test (void)
 
   // And now test the const iterator
   {
-    HASH_STRING_ENTRY *entry;
+    HASH_STRING_ENTRY *entry = 0;
     size_t i = 0;
 
     for (HASH_STRING_CONST_ITER hash_iter (hash);
@@ -213,7 +213,7 @@ run_test (void)
 
   // Let's test the iterator backwards.
   {
-    HASH_STRING_ENTRY *entry;
+    HASH_STRING_ENTRY *entry = 0;
     size_t i = 0;
 
     for (HASH_STRING_REVERSE_ITER hash_iter (hash);
