@@ -3,6 +3,11 @@ Thu Mar 30 12:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
         * ace/Configuration.cpp:
         * ace/Shared_Memory_MM.cpp:
         * ace/ARGV.cpp:
+        * examples/APG/Containers/Stacks.cpp:
+        * examples/APG/Containers/RB_Tree_Functors.cpp:
+        * examples/APG/Containers/Queues.cpp:
+        * ace/RB_Tree.inl:
+        * tests/Hash_Map_Manager_Test.cpp:
           Fixed value might be unitialized warnings
 
 Thu Mar 30 11:27:00 UTC 2006  Simon McQueen  <sm@prismtech.com>
